# rust_backend_prac

./: Cargo.toml
migrations/: 20241023092659_users.down.sql  20241023092659_users.up.sql
src/: config.rs  main.rs
src/models/: user_model.rs
