[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
argon2 = "0.3"
dotenvy = "0.15"
tower-http = "0.4"
axum-extra = { version = "0.6", features = ["cookies"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.83"
chrono = "0.4.38"
uuid = "1.11.0"
tower = "0.5.1"
time = "0.3.36"
lettre = "0.11.9"
validator = "0.18.1"